2009-10-14  Neil Williams  <linux@codehelp.co.uk>

	* COPYING-DOCS: GFDL-1.3 for Manual.
	* Makefile.am: Add help
	* autogen.sh: Include the help macros
	* configure.ac: Add help dir.
	* data/gpdftext.schemas.in: Extended a bit, not
	active yet.
	* help/C/gpdftext.xml: Initial help content.
	* help/C/legal.xml: Help licence.
	* help/ChangeLog: New file.
	* help/Makefile.am: Default help rules.
	* help/gpdftext.omf.in: Help support.
	* src/gpdftext.glade: Initial preferences dialog.

2009-10-14  Neil Williams  <linux@codehelp.co.uk>

	* Makefile.am: Use the new data directory.
	* configure.ac: Add GConf and GtkSpell checks
	* data/Makefile.am: New subdirectory
	* data/gpdftext.schemas.in: New GConf schema
	* debian/control: Add GConf and gtkspell
	* debian/rules: Add GConf support.
	* po/POTFILES.in: Add GConf
	* src/Makefile.am: 
	* src/callbacks.c: Allow the text file to be
	  saved with the name already specified.
	* src/gpdftext.glade: Set default window size
	  to the same proportions as A5 and most books.
	* src/main.c: Initialise GConf.
	* src/pdf.h: Ideas for creating new PDF files
	* src/pdf.c: PDF and PS export ideas/

2009-10-11  Neil Williams  <linux@codehelp.co.uk>

	* Makefile.am: Add desktop file support.
	* configure.ac: Configurable desktop support.
	* gpdftext.desktop.in: Desktop file.
	* po/POTFILES.in: Translate desktop file.

2009-10-11  Neil Williams  <linux@codehelp.co.uk>

	* README: Notes for 0.1.0
	* src/callbacks.c: Enable saving files as text.
	* src/callbacks.h: open files from the command line.
	* src/gpdftext.glade: tweak default size
	* src/main.c: GFile and GVFS support.

2009-10-11  Neil Williams  <linux@codehelp.co.uk>

	* Makefile.am: Add manpage generation upstream.
	* manpage.xml: Add manpage.
	* src/Makefile.am: Add -Wl,-z,defs -Wl,--as-needed

2009-10-11  Neil Williams  <linux@codehelp.co.uk>

	* Makefile.am: No need to install doc files.
	* gpdftext.png (added):
	* gpdftext.xpm (added):